--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Engine\packages.config" />
+  <repository path="..\Hosts\Console\TddStud10App\packages.config" />
+  <repository path="..\Hosts\VS\TddStudioPackage\packages.config" />
   <repository path="..\TestHost\packages.config" />
 </repositories>
