--- a/TestHost/TestHost.csproj
+++ b/TestHost/TestHost.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,8 +66,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeCoverageClient.cs" />
+    <Compile Include="CodeCoverage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CodeCoverageServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
