--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Engine\packages.config" />
   <repository path="..\Hosts\Console\TddStud10App\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage\packages.config" />
+  <repository path="..\RealTimeEtwListener\packages.config" />
   <repository path="..\TestHost\packages.config" />
 </repositories>
