Adding stub projects

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Engine.Core.UnitTests\packages.config" />
   <repository path="..\Engine\packages.config" />
   <repository path="..\Hosts\Console\TddStud10App\packages.config" />
+  <repository path="..\Hosts\VS\TddStudioPackage.Extensions.UnitTests\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage\packages.config" />
   <repository path="..\RealTimeEtwListener\packages.config" />
+  <repository path="..\TestHost.Core.UnitTests\packages.config" />
   <repository path="..\TestHost\packages.config" />
 </repositories>
