--- a/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>TddStudioPackage.Extensions</RootNamespace>
     <AssemblyName>R4nd0mApps.TddStud10.Hosts.VS.TddStudioPackage.Extensions</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>TddStudioPackage.Extensions</Name>
     <TargetFrameworkProfile />
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
