Introducing f# enabling self-referential dog-fooding

--- a/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
@@ -9,7 +9,7 @@
     <ProjectGuid>d59b062a-dd0d-4be3-8add-4d108473a2ff</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>TddStudioPackage.Extensions.UnitTests</RootNamespace>
-    <AssemblyName>TddStudioPackage.Extensions.UnitTests</AssemblyName>
+    <AssemblyName>R4nd0mApps.TddStud10.Hosts.VS.TddStudioPackage.Extensions.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>TddStudioPackage.Extensions.UnitTests</Name>
@@ -55,14 +55,17 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Content Include="app.config" />
-    <Compile Include="SomeTests.fs" />
+    <Compile Include="TestDoubles.ServiceProvider.fs" />
+    <Compile Include="ServicesTest.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
