--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -9,10 +9,11 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Engine.Core</RootNamespace>
     <AssemblyName>R4nd0mApps.TddStud10.Engine.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>Engine.Core</Name>
     <NuGetPackageImportStamp>f95bee51</NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,6 +62,8 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Compile Include="Logger.fs" />
+    <Compile Include="RunDefinition.fs" />
+    <Compile Include="RunExecutor.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
@@ -74,6 +77,19 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestHost.Core\TestHost.Core.fsproj">
+      <Name>TestHost.Core</Name>
+      <Project>{84693096-cba0-407a-900a-3b48d21c5459}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\TestHost\TestHost.csproj">
+      <Name>TestHost</Name>
+      <Project>{d6d4d595-14e0-4631-9ff5-f33976e08b34}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
