Move to new progress reporting arch
√ extract methods
√ transform signatures
√ support cancellation

--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="Logger.fs" />
     <Compile Include="RunDefinition.fs" />
     <Compile Include="RunExecutor.fs" />
+    <Compile Include="RunStepFuncWrappers.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
