--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -61,8 +61,9 @@
   </Target>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Compile Include="TddStud10RunnerDomain.fs" />
     <Compile Include="Logger.fs" />
-    <Compile Include="RunDefinition.fs" />
+    <Compile Include="SafeExec.fs" />
     <Compile Include="StaleMessageIgnoringAgent.fs" />
     <Compile Include="PathBuilder.fs" />
     <Compile Include="RunStepFuncBehaviors.fs" />
