--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="PathBuilder.fs" />
     <Compile Include="RunStepFuncBehaviors.fs" />
     <Compile Include="RunExecutor.fs" />
+    <Compile Include="RunStateTracker.fs" />
     <Compile Include="TddStud10Runner.fs" />
   </ItemGroup>
   <ItemGroup>
