--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,8 @@
   <repository path="..\Engine.Core.UnitTests\packages.config" />
   <repository path="..\Engine.Core\packages.config" />
   <repository path="..\Engine\packages.config" />
+  <repository path="..\Hosts\Common\CommonUI.UnitTests\packages.config" />
+  <repository path="..\Hosts\Common\CommonUI\packages.config" />
   <repository path="..\Hosts\Console\TddStud10App\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage.Extensions.UnitTests\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage.Extensions\packages.config" />
