--- a/Hosts/Console/TddStud10App/TddStud10App.csproj
+++ b/Hosts/Console/TddStud10App/TddStud10App.csproj
@@ -160,6 +160,10 @@
       <Project>{d6d4d595-14e0-4631-9ff5-f33976e08b34}</Project>
       <Name>TestHost</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Common\CommonUI\CommonUI.csproj">
+      <Project>{c578a684-2fff-4100-8620-c1220d05ea3e}</Project>
+      <Name>CommonUI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="('$(Configuration)' != 'Debug') and Exists('..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
